flex wrap fixed

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
   text-align: center;
   text-shadow:4px 4px 0 rgba(0,0,0,0.1);
   padding:10px;
-  width: 10%;
+  width: 33%;
 }
 
 /* Colours for each box */
